--- a/.github/workflows/deploy-to-hf.yml
+++ b/.github/workflows/deploy-to-hf.yml
@@ -20,7 +20,7 @@ jobs:
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
 
-          git clone https://$HF_TOKEN@huggingface.co/spaces/Nishchayb9/plant-disease-classifier hf-space
+          git clone git clone https://Nishchayb9:$HF_TOKEN@huggingface.co/spaces/Nishchayb9/plant-disease-classifier hf-space
           rsync -av --exclude='.git' ./ hf-space/
           cd hf-space
           git add .
