--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-absl-py==1.4.0
+fastai
 torch
 torchvision
 torchaudio
-fastai==2.7.19
-pandas==2.2.2
-numpy==2.0.2
-timm==1.0.16
-fasttransform==0.0.2
-cloudpickle==3.1.1
+timm
+gradio
+huggingface_hub
+cloudpickle
