--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-fastai==2.7.19
-torch==2.1.2
-torchvision==0.16.2
-torchaudio==2.1.2
-numpy==1.26.4
-pandas==2.1.4
-timm==0.9.12
-huggingface-hub
+fastai
+torch
+torchvision
+torchaudio
+numpy
+pandas
+timm
 gradio
+huggingface-hub
 ipython
